--- a/zadatak1.html
+++ b/zadatak1.html
@@ -12,7 +12,7 @@
     </style>
 </head>
 <body style="text-align: center;">
-    <form action="1Zadatak.php" method="GET">
+    <form action="zadatak1.php" method="GET">
         <div classs="form-group">
             <label for="day">Dan</label><br>
             <input type="text" name="day" id="day" placeholder="dd">
